# domclick_bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  example.env  pyproject.toml
app/: __main__.py  config_reader.py  utils.py
app/bot/: __init__.py  keyboards.py  loader.py  redis_custom_key_builder.py  states.py
app/bot/handlers/: __init__.py  errors.py  start.py
app/bot/handlers/profile/: lang.py
app/bot/middlewares/: __init__.py  buttons.py  db.py  fluent.py
app/services/: redman.py
app/services/db/: __init__.py  loader.py
app/services/db/migrations/: env.py
app/services/db/migrations/versions/: a0c0424c5c4e_initial.py
app/services/db/models/: __init__.py  user_models.py
app/services/db/repos/: __init__.py  user_repo.py
app/services/fluent/: __init__.py  generate_hub.py  i18n.py  translator_hub.py  utils.py
app/services/fluent/locales/ru/: buttons.ftl  commands.ftl
app/types/: __init__.py  filters.py  handlers.py  middlewares.py  sqlalchemy.py
app/web/: __init__.py  __main__.py  loader.py  stubs.py  webhook.py
